.xmonad/xmonad.errors

xmonad.hs:455:8: error: Empty 'do' block
    |
455 | main = do
    |        ^^
